--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -35,7 +35,7 @@ jobs:
       # build and test the apps     
       - name: build
         run: |
-          npm start
+          npm test
   push_to_Docker_Hub:
       # The type of runner that the job will run on
       runs-on: ubuntu-latest
