--- a/.github/workflows/cicd-pr.yml
+++ b/.github/workflows/cicd-pr.yml
@@ -1,5 +1,4 @@
 # This workflow will build a Node Express app
-
 name: node-express-rest-api-ci-cd-pr-process
 
 on:
@@ -30,29 +29,20 @@ jobs:
             #-Dsonar.tests= # optional. For more info about Code Coverage, please refer to https://docs.sonarcloud.io/enriching/test-coverage/overview/
             # Adds more detail to both client and server-side analysis logs, activating DEBUG mode for the scanner, and adding client-side environment variables and system properties to the server-side log of analysis report processing.
             #-Dsonar.verbose= # optional, default is false
-
   build-test:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    needs: [code-analysis]
     strategy:
       matrix:
         node-version: [14.x]
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Git checkout
-      - uses: actions/checkout@v2
-
-      # Setup node
+        uses: actions/checkout@v2
       - name: Setup Node
         uses: actions/setup-node@master
         with:
           node-version: ${{ matrix.node-version }}
-
-      # install applicaion dependencies
       - name: Install dependencies
         run: npm install
-
-      # build and test the apps
       - name: Run Tests
         run: npm test
