--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
-name: node-express-rest-api-deploy
+name: deploy
 on:
   workflow_run:
-    workflows: ["node-express-rest-api-ci-cd"]
+    workflows: ["cicd-main"]
     types:
       - completed
 jobs:
