--- a/.github/workflows/cicd-main.yml
+++ b/.github/workflows/cicd-main.yml
@@ -2,8 +2,6 @@
 name: cicd-main
 
 on:
-  push:
-    branches: [main]
   pull_request:
     branches:
       - main
@@ -11,6 +9,7 @@ on:
 
 jobs:
   build-test:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     strategy:
       matrix:
