--- a/.github/workflows/cicd-pr.yml
+++ b/.github/workflows/cicd-pr.yml
@@ -32,17 +32,25 @@ jobs:
   build-test:
     runs-on: ubuntu-latest
     needs: [code-analysis]
-    strategy:
-      matrix:
-        node-version: [14.x]
     steps:
       - name: Git checkout
         uses: actions/checkout@v2
       - name: Setup Node
         uses: actions/setup-node@master
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 16
       - name: Install dependencies
         run: npm install
       - name: Run Tests
         run: npm test
+  run-api-tests:
+    runs-on: ubuntu-latest
+    needs: [build-test]
+    services:
+      service1:
+        image: mail2prajwal12/rest-web-service-api-test:latest
+        ports:
+          - 3001:3001
+    steps:
+      - name: Run API Tests
+        run: docker run -v $(pwd):/src -v /src/node_modules -d -p 3001:3001 --name rest-api-tests-app rest-web-service-api-test
