--- a/.github/workflows/cicd-pr.yml
+++ b/.github/workflows/cicd-pr.yml
@@ -47,7 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-test]
     steps:
-      - name: Setup app docker
-        run: make build && make run
+      - name: Run docker-compose
+        run: docker-compose up -d --build
       - name: Run API Tests
-        run: docker run -v $(pwd):/src -v /src/node_modules -d --name rest-api-tests-app mail2prajwal12/rest-web-service-api-test
+        run: docker run -d --name rest-api-tests-app mail2prajwal12/rest-web-service-api-test
