--- a/.github/workflows/cicd-pr.yml
+++ b/.github/workflows/cicd-pr.yml
@@ -47,6 +47,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-test]
     steps:
+      - name: Git checkout
+        uses: actions/checkout@v2
       - name: Run docker-compose
         run: docker-compose up -d --build
       - name: Run API Tests
