--- a/.github/workflows/cicd-pr.yml
+++ b/.github/workflows/cicd-pr.yml
@@ -54,6 +54,6 @@ jobs:
       - name: Docker network
         run: docker network ls && docker network inspect local
       - name: Build node-rest-api-app docker container
-        run: docker build -t image . && docker run -d -p 3001:3001 -v .:/src -v /src/node_modules --net local --name app image
+        run: docker build -t image . && docker run -d -p 3001:3001 -v $(pwd):/src -v /src/node_modules --net local --name app image
       - name: Run API Tests
         run: docker run -d --net local --name rest-api-tests-app mail2prajwal12/rest-web-service-api-test
