--- a/.github/workflows/cicd-pr.yml
+++ b/.github/workflows/cicd-pr.yml
@@ -56,10 +56,6 @@ jobs:
       - name: Build node-rest-api-app docker container
         run: docker build -t image . && docker run -d -p 3001:3001 -v $(pwd):/src -v /src/node_modules --net local --name app image
       - name: Run API Tests
-        run: docker run -d --net local --name rest-api-tests-app mail2prajwal12/rest-web-service-api-test
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: my-artifact
-      - name: Display structure of downloaded files
-        run: ls -R
+        run: docker run -d -v $(pwd):/src --net local --name rest-api-tests-app mail2prajwal12/rest-web-service-api-test
+      - name: Docker copy file to local
+        run: docker cp rest-api-tests-app:/reports/cucumber-reports.html $(pwd)
